--- a/index.html
+++ b/index.html
@@ -616,8 +616,110 @@ function onStyleChange() {
   if (currentTemplate) updatePreview(currentTemplate);
 }
 
-function exportDoc() { showToast(T[lang].toastWord); }
-function exportPDF() { showToast(T[lang].toastPdf); }
+function buildDocContent() {
+  if (!currentTemplate) return null;
+  var tpl = TEMPLATES[currentTemplate];
+  var info = tpl[lang] || tpl['ar'];
+  var data = formData[currentTemplate] || {};
+  var style = document.getElementById('styleSelect').value;
+  var uniName = lang === 'ar' ? 'جامعة الباحث العلمية' : 'Academic Research University';
+  var dir = lang === 'ar' ? 'rtl' : 'ltr';
+  var align = lang === 'ar' ? 'right' : 'left';
+  var sections = [];
+  tpl.fields.forEach(function(f) {
+    var finfo = f[lang] || f['ar'];
+    var val = '';
+    if (f.type === 'questions') {
+      var list = data[f.id + '_list'] || [];
+      val = list.filter(function(q){ return q && q.trim(); }).map(function(q,i){ return (i+1)+'. '+q; }).join('\n');
+    } else {
+      val = data[f.id] || '';
+    }
+    sections.push({ label: finfo.label, value: val });
+  });
+  return { title: info.title, uniName: uniName, style: style, dir: dir, align: align, sections: sections };
+}
+
+function exportDoc() {
+  var d = buildDocContent();
+  if (!d) { showToast(lang === 'ar' ? 'اختر قالباً أولاً' : 'Please select a template first'); return; }
+  // Build HTML-based Word document (opens in Word)
+  var rowsHTML = d.sections.map(function(s) {
+    var val = s.value.trim() || (lang === 'ar' ? 'لم يُدخَل بعد' : 'Not yet entered');
+    // Convert newlines to <br>
+    var valHTML = val.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/\n/g,'<br>');
+    return '<h2 style="font-size:13pt;color:#0f0e0d;border-bottom:1px solid #ccc;padding-bottom:4pt;margin-top:18pt;">'
+      + s.label.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;')
+      + '</h2>'
+      + '<p style="font-size:12pt;line-height:1.8;color:#333;margin-top:6pt;">' + valHTML + '</p>';
+  }).join('');
+
+  var html = '<!DOCTYPE html><html><head>'
+    + '<meta charset="UTF-8">'
+    + '<style>'
+    + 'body{font-family:\'Times New Roman\',serif;direction:' + d.dir + ';text-align:' + d.align + ';margin:2.5cm;line-height:1.8;}'
+    + 'h1{font-size:16pt;text-align:center;color:#0f0e0d;margin-bottom:6pt;}'
+    + 'h2{font-size:13pt;}'
+    + '.header{text-align:center;border-bottom:2pt solid #000;padding-bottom:12pt;margin-bottom:24pt;}'
+    + '.style-tag{font-size:9pt;color:#888;margin-top:4pt;}'
+    + '</style>'
+    + '</head><body>'
+    + '<div class="header">'
+    + '<div style="font-size:11pt;font-weight:bold;">' + d.uniName + '</div>'
+    + '<h1>' + d.title.replace(/&/g,'&amp;') + '</h1>'
+    + '<div class="style-tag">' + d.style + ' Format | ' + new Date().getFullYear() + '</div>'
+    + '</div>'
+    + rowsHTML
+    + '</body></html>';
+
+  var blob = new Blob(['\ufeff' + html], { type: 'application/msword;charset=utf-8' });
+  var url = URL.createObjectURL(blob);
+  var a = document.createElement('a');
+  a.href = url;
+  a.download = (currentTemplate || 'research') + '_mulhim.doc';
+  document.body.appendChild(a);
+  a.click();
+  document.body.removeChild(a);
+  URL.revokeObjectURL(url);
+  showToast(T[lang].toastWord);
+}
+
+function exportPDF() {
+  var d = buildDocContent();
+  if (!d) { showToast(lang === 'ar' ? 'اختر قالباً أولاً' : 'Please select a template first'); return; }
+  var rowsHTML = d.sections.map(function(s) {
+    var val = s.value.trim() || (lang === 'ar' ? 'لم يُدخَل بعد' : 'Not yet entered');
+    var valHTML = val.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;').replace(/\n/g,'<br>');
+    return '<div style="margin-bottom:18pt;">'
+      + '<div style="font-size:11pt;font-weight:bold;color:#0f0e0d;border-bottom:1px solid #ccc;padding-bottom:4pt;margin-bottom:8pt;text-transform:uppercase;letter-spacing:0.05em;">'
+      + s.label.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;')
+      + '</div>'
+      + '<div style="font-size:11pt;line-height:1.9;color:#333;">' + valHTML + '</div>'
+      + '</div>';
+  }).join('');
+
+  var html = '<!DOCTYPE html><html><head>'
+    + '<meta charset="UTF-8">'
+    + '<title>' + d.title + '</title>'
+    + '</head><body style="font-family:Georgia,serif;direction:' + d.dir + ';text-align:' + d.align + ';margin:0;padding:2cm;">'
+    + '<div style="text-align:center;border-bottom:2pt solid #000;padding-bottom:14pt;margin-bottom:28pt;">'
+    + '<div style="font-size:11pt;font-weight:bold;">' + d.uniName + '</div>'
+    + '<div style="font-size:15pt;font-weight:bold;margin-top:6pt;">' + d.title.replace(/&/g,'&amp;') + '</div>'
+    + '<div style="font-size:9pt;color:#888;margin-top:4pt;">' + d.style + ' Format | ' + new Date().getFullYear() + '</div>'
+    + '</div>'
+    + rowsHTML
+    + '<script>window.onload=function(){window.print();}<\/script>'
+    + '</body></html>';
+
+  var w = window.open('', '_blank');
+  if (w) {
+    w.document.write(html);
+    w.document.close();
+    showToast(T[lang].toastPdf);
+  } else {
+    showToast(lang === 'ar' ? 'السماح بالنوافذ المنبثقة من إعدادات المتصفح' : 'Allow pop-ups in browser settings');
+  }
+}
 
 function showToast(msg) {
   var t = document.getElementById('toast');
@@ -639,5 +741,23 @@ function escAttr(s) {
 // Init
 setTimeout(function() { selectTemplate('proposal'); }, 100);
 </script>
+
+<footer style="background:#0f0e0d;border-top:3px solid #c9a84c;padding:2.5rem 2rem;text-align:center;font-family:'Tajawal',sans-serif;">
+  <div style="display:inline-block;border:1px solid #2a2925;border-radius:16px;padding:1.75rem 3rem;background:linear-gradient(135deg,#1a1916,#111);box-shadow:0 0 40px rgba(201,168,76,0.08);max-width:600px;width:100%;">
+    <div style="font-size:1.5rem;margin-bottom:.6rem;color:#c9a84c;">✦</div>
+    <div style="font-size:.65rem;color:#c9a84c;letter-spacing:.2em;text-transform:uppercase;font-family:'IBM Plex Mono',monospace;margin-bottom:.85rem;">إهـداء</div>
+    <p style="font-size:1.05rem;color:#e8e2d8;line-height:2;font-weight:400;margin:0;">
+      إلى كل باحث يسعى لإضافة حرف في كتاب المعرفة،<br>
+      إلى كل قلم لم يتوقف رغم صعوبة الطريق،<br>
+      <span style="color:#c9a84c;font-weight:700;">هذا الموقع لكم.</span>
+    </p>
+    <div style="margin-top:1.25rem;padding-top:1.25rem;border-top:1px solid #2a2925;font-size:.82rem;color:#7a7268;">
+      بكل تقدير واحترام،
+      <span style="color:#c9a84c;font-weight:700;font-size:1rem;display:block;margin-top:.3rem;">سلطان بن عايد</span>
+    </div>
+  </div>
+  <div style="margin-top:1rem;font-size:.65rem;color:#3a3830;font-family:'IBM Plex Mono',monospace;">مُلهِم البحثي © 2025 — Sultan-Ayed</div>
+</footer>
+
 </body>
 </html>
