--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>مُلهِم البحثي | Smart Academic Writing</title>
+<title>فجر | البداية المنظمة لكل باحث</title>
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700;800&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
 <style>
 :root{--ink:#0f0e0d;--paper:#f5f0e8;--cream:#ede8de;--gold:#c9a84c;--gold-light:#e8cf8a;--teal:#1a6b6b;--teal-light:#2a9d8f;--muted:#7a7268;--border:#d4cebf;--white:#fdfcfa;--shadow:rgba(15,14,13,0.12)}
@@ -104,8 +104,8 @@ body.en .preview-panel{border-right:none;border-left:1px solid var(--border)}
   <div class="logo">
     <div class="logo-icon">✦</div>
     <div>
-      <div class="logo-text" id="logoText">مُلهِم البحثي</div>
-      <div class="logo-sub">SMART ACADEMIC PLATFORM</div>
+      <div class="logo-text" id="logoText">فجر</div>
+      <div class="logo-sub">فجر: البداية المنظمة لكل باحث.</div>
     </div>
   </div>
   <div class="header-controls">
@@ -676,7 +676,7 @@ function exportDoc() {
   var url = URL.createObjectURL(blob);
   var a = document.createElement('a');
   a.href = url;
-  a.download = (currentTemplate || 'research') + '_mulhim.doc';
+  a.download = (currentTemplate || 'research') + '_fajr.doc';
   document.body.appendChild(a);
   a.click();
   document.body.removeChild(a);
@@ -756,7 +756,7 @@ setTimeout(function() { selectTemplate('proposal'); }, 100);
       <span style="color:#c9a84c;font-weight:700;font-size:1rem;display:block;margin-top:.3rem;">سلطان بن عايد</span>
     </div>
   </div>
-  <div style="margin-top:1rem;font-size:.65rem;color:#3a3830;font-family:'IBM Plex Mono',monospace;">مُلهِم البحثي © 2025 — Sultan-Ayed</div>
+  <div style="margin-top:1rem;font-size:.65rem;color:#3a3830;font-family:'IBM Plex Mono',monospace;">فجر © 2025 — Sultan-Ayed</div>
 </footer>
 
 </body>
